discussion/kv_engine/145864/145864_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-44140: Make getDroppedCollections return status

Change-Id: Ib239bf424b42d039ba164732c1ee61737348d322

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-02-17 16:23:01.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-02-17 16:51:07.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16645/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7153/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1406:20: error: cannot initialize return object of type "CouchKVStore::CompactDBInternalStatus" with an rvalue of type "bool" [clang-diagnostic-error]
            return false;
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1511:20: error: cannot initialize return object of type "CouchKVStore::CompactDBInternalStatus" with an rvalue of type "bool" [clang-diagnostic-error]
            return false;
                   ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7153/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1406:20:
error: cannot initialize return object of type "CouchKVStore::CompactDBInternalStatus" with an rvalue of type "bool" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7153/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33668/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(1406): error C2440: "return": cannot convert from "bool" to "CouchKVStore::CompactDBInternalStatus" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33668/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28949/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1406:20:
error: cannot initialize return object of type "CouchKVStore::CompactDBInternalStatus" with an rvalue of type "bool"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28949/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7800/ : FAILURE

Compile error at [2021-02-17T16:30:02.388Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1406:20:
error: cannot initialize return object of type "CouchKVStore::CompactDBInternalStatus" with an rvalue of type "bool"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7800/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8885/ : FAILURE

Compile error at [2021-02-17T16:36:00.545Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1406:20:
error: cannot convert ?bool? to ?CouchKVStore::CompactDBInternalStatus? in return
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8885/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9093/ : FAILURE

Compile error at [2021-02-17T16:44:24.640Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1406:20:
error: cannot initialize return object of type "CouchKVStore::CompactDBInternalStatus" with an rvalue of type "bool"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9093/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8747/ : FAILURE

Compile error at [2021-02-17T16:43:23.337Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1406:20:
error: cannot convert ?bool? to ?CouchKVStore::CompactDBInternalStatus? in return
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8747/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5690/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
